# streamlit-ts

./: pyproject.toml
src/streamlit_ts/: app.py  datasets.py
tests/: test_datasets.py
