[tool.poetry]
name = "streamlit-ts"
version = "0.1.0"
description = ""
authors = ["justusbersten <justusbersten@gmail.com>"]
readme = "README.md"
packages = [{include = "streamlit_ts", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.2.2"
streamlit = "^1.33.0"
statsforecast = "^1.7.4"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
